# keel

./: .gitignore  .pre-commit-config.yaml  AGENT_CONTINUATION.md  CLAUDE.md.bak.20260428T115825408544  LICENSE  Makefile  README.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
design_handoff_workflow/: README.md  Tripwire - Workflow Handoff.html  Tripwire - Workflow.html
design_handoff_workflow/handoff/: anatomy.jsx  behaviour.jsx  closing.jsx  cover.jsx  elements.jsx  page-chrome.jsx  schema.jsx  styles.jsx
design_handoff_workflow/philosophy/: styles.css
design_handoff_workflow/screens/: scenario.jsx  screen-shell.jsx  theme-tweaks.jsx  theme.jsx
design_handoff_workflow/workflow/: atoms.jsx  data.jsx  flowchart.jsx  layout.jsx  navigator.jsx  page.jsx  registry.jsx
docs/: agent-containers.md  agent-projects-plan.md  agent-projects-ui.md  backlog.md  kb-pivot-test-prompt.md  keel-core-features.md  keel-plan.md  keel-ui.md  learnings.md  overarching-plan.md  philosophy.md  similar-tools.md  testing-guide-kb-pivot.md
docs/handoffs/: 2026-05-03-workflow-frontend-handoff.md
docs/philosophy/: workflow.md
docs/plans/: 2026-05-02-v096-workflow-map-territory-plan.md  2026-05-02-v096-workflow-process-map-revision-plan.md
docs/skill-references/: AUTHORING_JIT_PROMPTS.md
docs/specs/: 2026-04-15-keel-workspace.md  2026-04-15-pm-session-spawn-and-agenda.md  2026-04-16-v07-pm-monitor.md  2026-04-20-v07-unified.md  2026-04-21-v08-tripwires-as-primitive.md  2026-04-22-session-execution-modes.md  2026-04-24-v074-handoff.md  2026-04-24-v075-handoff.md  2026-04-24-v08-bidirectional-concept-graph.md  2026-04-30-v09-entity-graph.md  2026-04-30-v09-jit-prompt-authoring.md  2026-04-30-v09-workflow-substrate.md  2026-05-02-v096-workflow-map-territory.md
docs/superpowers/plans/: 2026-04-15-keel-v0.6a-pm-workflow.md  2026-04-15-keel-v0.6b-workspace.md  2026-04-16-session-spawn-agenda-worktrees.md  2026-04-21-readme-v07-refresh.md  2026-04-21-v07a-rename-to-tripwire.md  2026-04-21-v07b-tripwire-features.md  2026-04-22-session-execution-modes-plan.md  2026-04-23-v072-subprocess-followups.md  V0.8-RAW 2.MD  V0.8-RAW.MD
docs/superpowers/specs/: 2026-04-15-pm-session-spawn-and-agenda.md  2026-04-16-session-spawn-agenda-worktrees-design.md  2026-04-16-session-worktrees.md  2026-04-16-v07-pm-monitor.md  2026-04-16-v1-package-split.md  2026-04-17-v07-issue-developer-notes.md  2026-04-20-v07-unified-design.md  2026-04-21-v08-tripwires-as-primitive.md  2026-04-22-session-execution-modes.md  2026-04-24-v074-handoff.md  2026-04-24-v075-draft-prs-at-session-start.md
experiments/: v02-kb-pivot-test.md  v03-kb-pivot-test.md  v04-graph-ui-v2-test.md
img/: README.md
scripts/: build_frontend.py  smoke-subprocess-resume.sh  smoke-subprocess-runtime.sh
src/agent_project/: __init__.py
src/agent_project/cli/: __init__.py  _profiling.py  artifacts.py  completion.py  enums.py  graph.py  init.py  main.py  next_key.py  node.py  refs.py  scaffold.py  status.py  templates.py  validate.py
src/agent_project/core/: __init__.py  concept_graph.py  dependency_graph.py  enum_loader.py  freshness.py  graph_cache.py  key_allocator.py  node_store.py  parser.py  status.py  store.py  validator.py
src/agent_project/models/: __init__.py  enums.py  graph.py  issue.py  project.py
src/keel/: __init__.py
src/keel/cli/: __init__.py  _profiling.py  agenda.py  artifacts.py  completion.py  enums.py  graph.py  init.py  lint.py  main.py  next_key.py  plan.py  refresh.py  refs.py  scaffold.py  session.py  status.py  templates.py  ui.py  uuid_cmd.py  validate.py  view.py  workspace.py
src/keel/core/: branch_naming.py  concept_graph.py  dependency_graph.py  enum_loader.py  git_helpers.py  graph_cache.py  key_allocator.py  node_store.py  paths.py  selectors.py  session_agenda.py  session_readiness.py  store.py  validator.py  workspace_sync.py
src/keel/models/: __init__.py  comment.py  enums.py  graph.py  handoff.py  manifest.py  node.py  project.py  session.py
src/keel/templates/: __init__.py  standards.md.j2
src/tripwire/: __init__.py
tests/: conftest.py
tests/fixtures/: fake_gh.py  fake_tmux.py
tests/integration/: test_deviation_jit_prompts.py  test_deviation_tripwires.py  test_entity_graph_e2e.py  test_init.py  test_lint_dogfood.py  test_next_key.py  test_pr_summary_cli.py  test_read_commands.py  test_readme_cli.py  test_runtime_monitor_e2e.py  test_scaffold.py  test_scaffold_alias.py  test_session_execution_end_to_end.py  test_session_lifecycle.py  test_session_spawn_lifecycle.py  test_validate_fix_concurrent.py  test_workflow_e2e.py  test_workspace_integration.py
tests/ui/: test_config.py  test_dependencies.py  test_file_watcher.py  test_file_watcher_process_event.py  test_process_event.py  test_route_registration.py  test_server.py  test_static_serving.py
tests/unit/: test_agenda.py  test_agent_runtime_field.py  test_batch_spawn.py  test_branch_naming.py  test_build_claude_args_interactive.py  test_ci_cli.py  test_cli_completion.py  test_cli_profiling.py  test_cli_verbose.py  test_codex_args.py  test_codex_review_protocol_doc.py  test_codex_review_workflow_template.py  test_codex_reviewer_agent_template.py  test_codex_skill_inlining.py  test_codex_stream.py  test_concept_drift.py  test_concept_graph.py  test_context_budget.py  test_dependency_graph.py  test_drift_report.py  test_enum_loader.py  test_freshness.py  test_git_helpers.py  test_github_client.py  test_graph_cache.py  test_graph_edges.py  test_graph_navigation.py  test_graph_query_cli.py  test_handoff_model.py  test_handoff_store.py  test_id_generator.py  test_init_github_remote.py  test_init_hooks.py  test_init_template.py  test_init_template_layout.py  test_init_workspace_flag.py  test_insights.py  test_insights_cli.py  test_issue_artifact_model.py  test_issue_artifact_store.py  (+134 more)
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: appSmoke.spec.ts  consoleGuard.ts
web/public/: site.webmanifest
(+927 files in other folders)
