[project]
# Distribution name differs from the import/CLI name because PyPI prohibits
# `tripwire` at the admin level (likely trademark-adjacent to the
# Tripwire/Fortra security product). Users install as `pip install tripwire-pm`;
# the CLI command (`tripwire`, `tw`) and `import tripwire` are unchanged.
name = "tripwire-pm"
version = "0.9.6"
description = "Git-native project management with concept graph for AI agents"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Seido AI Ltd" }]
urls = { Homepage = "https://github.com/SeidoAI/tripwire", Source = "https://github.com/SeidoAI/tripwire", Issues = "https://github.com/SeidoAI/tripwire/issues" }
dependencies = [
    # Core (always present, minimal)
    "pydantic>=2.0,<3.0",
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<16.0",
    "jinja2>=3.1,<4.0",
    # GitHub REST client used by `tripwire init` to auto-create the
    # project-tracking repo. Already pulled in transitively via
    # `fastapi[testclient]`; declared here so the dep is explicit.
    "httpx>=0.24,<1.0",
    # UI
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "watchdog>=4.0,<7.0",
    "websockets>=12.0,<17.0",
]

[project.optional-dependencies]
projects = [
    "pydantic>=2.0,<3.0",
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<16.0",
    "jinja2>=3.1,<4.0",
]

[project.scripts]
tripwire = "tripwire.cli.main:cli"
tw = "tripwire.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "httpx>=0.24",
    "ruff>=0.4.6,<1.0",
    "codespell>=2.2,<3.0",
    "pre-commit>=3.0,<5.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.10,<2.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tripwire"]
# The React source (full npm project) stays out of the wheel — wheel
# consumers only need the built bundle. `artifacts` re-adds the
# gitignored static/ output so it ships even though .gitignore hides it.
artifacts = [
    "src/tripwire/ui/static",
]

# Run the frontend build as part of `hatch build` / `uv build`. Skipped
# for editable installs — see hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# sdist carries the frontend source so `uv build` (which builds sdist
# then wheel-from-sdist) can re-run the hatch hook. The built static
# output is excluded — it's regenerated from the frontend source.
[tool.hatch.build.targets.sdist]
exclude = [
    "src/tripwire/ui/static",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["tripwire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not e2e'"
markers = [
    "e2e: end-to-end tests that boot the real CLI/server (opt-in via `-m e2e`)",
]

[tool.codespell]
# package-lock.json carries vendored npm names (devlop, trough, vEw)
# that codespell flags. afterAll/unparseable/statics are legitimate
# project terms — Vitest's hook name, our chosen wording, and the
# noun we use for "static files".
skip = "uv.lock,.venv,*.lock,*-lock.json"
ignore-words-list = "afterall,unparseable,statics"

[tool.mypy]
# Permissive baseline. The goal of the typecheck CI job at this stage
# is to catch syntax-level type errors and obvious mistakes — not to
# enforce strict typing across a codebase that wasn't written for it.
# The disabled error codes below are categories that surface real but
# deferred-fix issues; they will be re-enabled and addressed
# incrementally in follow-up PRs. See KUI-83.
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "list-item",
    "operator",
    "return-value",
    "valid-type",
    "misc",
]

[tool.coverage.report]
# Coverage floor enforced in CI via `pytest --cov-fail-under`. The flag
# stays the source of truth for the gate; this section documents the
# expected baseline so a drop is visible to anyone reading the config.
# Current measured coverage is ~88% (2026-04); floor is set 2pp below
# that to absorb routine churn. Bump up when sustained coverage rises.
fail_under = 86
